--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -602,6 +602,9 @@
     <ClCompile Include="Engine\Effect\Particle\Module\Updater\ParticleUpdateScaleModule.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Effect\Particle\Module\Updater\ParticleUpdateUVModule.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -829,6 +832,7 @@
     <ClInclude Include="Engine\Effect\Particle\Module\Updater\ParticleUpdateColorModule.h" />
     <ClInclude Include="Engine\Effect\Particle\Module\Updater\ParticleUpdateRotationModule.h" />
     <ClInclude Include="Engine\Effect\Particle\Module\Updater\ParticleUpdateScaleModule.h" />
+    <ClInclude Include="Engine\Effect\Particle\Module\Updater\ParticleUpdateUVModule.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\Copy\CopyTexture.CS.hlsl" />
