--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -313,11 +313,11 @@ Collapsed=1
 
 [Window][Inspector/##RightColumn_4F531AB5/GroupParam_0A394CD5/UpdatersSelect_829DD43B]
 IsChild=1
-Size=151,236
+Size=151,217
 
 [Window][Inspector/##RightColumn_4F531AB5/GroupParam_0A394CD5/UpdatersEdit_EDED895B]
 IsChild=1
-Size=409,236
+Size=409,217
 
 [Window][Inspector/##RightColumn_4F531AB5/GroupParam_0A394CD5/UpdatersSelect_CDCB66A9]
 IsChild=1
@@ -326,6 +326,14 @@ Size=179,215
 [Window][Inspector/##RightColumn_4F531AB5/GroupParam_0A394CD5/UpdatersEdit_258F89E5]
 IsChild=1
 Size=363,215
+
+[Window][Inspector/##RightColumn_4F531AB5/GroupParam_0A394CD5/PhaseEdit_021C0BDA/UpdatersSelect_2A04DEB9]
+IsChild=1
+Size=105,222
+
+[Window][Inspector/##RightColumn_4F531AB5/GroupParam_0A394CD5/PhaseEdit_021C0BDA/UpdatersEdit_95A19B9E]
+IsChild=1
+Size=349,222
 
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
