--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,9 @@ StyleCopReport.xml
 # *.svclog
 # *.scc
 Project/Log/engine.log
+Project/Log/assetCheck.log
+
+Project/Scripts/Make-UsedAssets.ps1
 
 # Chutzpah Test files
 _Chutzpah*
