使用されていないファイルはすべて削除

--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,7 @@ Project/Log/engine.log
 Project/Log/assetCheck.log
 
 Project/Scripts/Make-UsedAssets.ps1
+Project/Scripts/Build-ExeBundle.ps1
 
 # Chutzpah Test files
 _Chutzpah*
