--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -623,6 +623,9 @@
     <ClCompile Include="Engine\Utility\ImGuiHelper.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Scene\ClearScene.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -860,6 +863,7 @@
     <ClInclude Include="Engine\Effect\Particle\Module\ParticleModuleID.h" />
     <ClInclude Include="Engine\Utility\ImGuiHelper.h" />
     <ClInclude Include="Engine\Asset\AssetEditorPayloadData.h" />
+    <ClInclude Include="Game\Scene\ClearScene.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\Copy\CopyTexture.CS.hlsl" />
