不要になった処理の削除

--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -410,6 +410,15 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
+[Table][0x03347093,6]
+RefScale=24
+Column 0  Width=79
+Column 1  Weight=1.0000
+Column 2  Width=130
+Column 3  Width=89
+Column 4  Width=99
+Column 5  Width=240
+
 [Docking][Data]
 DockNode              ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=0x6FEC1CC8
   DockNode            ID=0x00000002 Parent=0x00000001 SizeRef=172,219 Selected=0x6FEC1CC8
