--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -623,6 +623,9 @@
     <ClCompile Include="Game\Objects\TitleScene\TitleController.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Objects\TitleScene\DisplaySprite\GameFinishUI.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -864,6 +867,8 @@
     <ClInclude Include="Game\Objects\TitleScene\TitleController.h" />
     <ClInclude Include="Engine\Input\Base\IInputDevice.h" />
     <ClInclude Include="Engine\Input\Base\InputMapper.h" />
+    <ClInclude Include="Game\Objects\TitleScene\DisplaySprite\GameFinishUI.h" />
+    <ClInclude Include="Engine\Asset\AssetLoadType.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\Copy\CopyTexture.CS.hlsl" />
