--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -638,6 +638,9 @@
     <ClCompile Include="Game\Objects\Base\GamecButtonFocusNavigator.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Utility\StateTimer.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -886,6 +889,7 @@
     <ClInclude Include="Game\Objects\Common\GameButtonBlinkingUpdater.h" />
     <ClInclude Include="Engine\Utility\AnimationLoop.h" />
     <ClInclude Include="Game\Objects\Base\GamecButtonFocusNavigator.h" />
+    <ClInclude Include="Engine\Utility\StateTimer.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\Copy\CopyTexture.CS.hlsl" />
