--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -641,6 +641,9 @@
     <ClCompile Include="Engine\Utility\StateTimer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Objects\GameScene\GameController.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -890,6 +893,7 @@
     <ClInclude Include="Engine\Utility\AnimationLoop.h" />
     <ClInclude Include="Game\Objects\Base\GamecButtonFocusNavigator.h" />
     <ClInclude Include="Engine\Utility\StateTimer.h" />
+    <ClInclude Include="Game\Objects\GameScene\GameController.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\Copy\CopyTexture.CS.hlsl" />
