--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -641,7 +641,19 @@
     <ClCompile Include="Engine\Utility\StateTimer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Game\Objects\GameScene\GameController.cpp">
+    <ClCompile Include="Game\Scene\GameState\States\StartGameState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Scene\GameState\States\BeginGameState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Scene\GameState\States\PlayGameState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Scene\GameState\States\EndGameState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Scene\GameState\States\PauseState.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -893,7 +905,13 @@
     <ClInclude Include="Engine\Utility\AnimationLoop.h" />
     <ClInclude Include="Game\Objects\Base\GamecButtonFocusNavigator.h" />
     <ClInclude Include="Engine\Utility\StateTimer.h" />
-    <ClInclude Include="Game\Objects\GameScene\GameController.h" />
+    <ClInclude Include="Game\Scene\GameState\Interface\IGameSceneState.h" />
+    <ClInclude Include="Game\Scene\GameState\GameContext.h" />
+    <ClInclude Include="Game\Scene\GameState\States\StartGameState.h" />
+    <ClInclude Include="Game\Scene\GameState\States\BeginGameState.h" />
+    <ClInclude Include="Game\Scene\GameState\States\PlayGameState.h" />
+    <ClInclude Include="Game\Scene\GameState\States\EndGameState.h" />
+    <ClInclude Include="Game\Scene\GameState\States\PauseState.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\Copy\CopyTexture.CS.hlsl" />
